# picinterp

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml
include/: picinterp.hpp  picinterp_cb.hpp  picinterp_utils.hpp
src/: CMakeLists.txt  generate_get.py  generate_put.py  interp_get.hpp  interp_get_impl.hpp  interp_get_py.cpp  interp_get_py.hpp  interp_put.hpp  interp_put_impl.hpp  interp_put_py.cpp  interp_put_py.hpp  interp_py.cpp  utils.hpp
src/impls/: interp_get_0.cpp  interp_get_1.cpp  interp_get_2.cpp  interp_get_3.cpp  interp_get_4.cpp  interp_put_0.cpp  interp_put_1.cpp  interp_put_2.cpp  interp_put_3.cpp  interp_put_4.cpp
