[build-system]
requires = [
    "setuptools>=42.0.0",
    "cmake>=3.12",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "picinterp"
version = "0.1"
authors = [
    { name = "Junyi Ren", email = "jyren9871@gmail.com" },
]
description = "A Python package for time series analysis"
classifiers = [
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
