[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11~=2.10.4",
    "cmake>=3.12"
]
build-backend = "setuptools.build_meta"

[project]
name = "picinterp"
version = "0.1"
authors = [
    { name = "Junyi Ren", email = "jyren9871@gmail.com" },
]
description = "Particle-in-cell shape function interpolate"
classifiers = [
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
